# acetone-SimpleYggGen-CPP

./: .gitignore  CMakeLists.txt  README.md  SimpleYggGen.cpp  main.cpp
2.0-outrunning/: Makefile  Makefile.mingw  README.md  sygcpp.cpp
2.0-outrunning/windows/: resource.rc
2.1-vort/: Makefile  Makefile.mingw  README.md  sygcpp.cpp  x25519-x86_64.asm  x25519.cpp
3.0-vort/: Makefile  sygcpp.cpp  x25519.cpp
3.2/: Makefile  config.cpp  config.h  sygcpp.cpp
3.2-reggae/: Makefile  config.cpp  sha512.cpp  sygcpp.cpp
3.2.1/: README.md  basefiles.cpp
3.2.1/_build/: syg-high.txt  syg-regexp.txt  sygcpp.conf
3.2.1/windows/: resource.rc
3.2/_build/: syg-byname.txt  sygcpp.conf
Releases/1.0-hothead/: sygcppv1.0.cpp
Releases/1.1-train/: Makefile.linux  Makefile.mingw  README.md  syg.rc  sygcpp1.1.cpp  sygcppv1.1.cpp
Releases/2.0-outrunning/: .gitignore  Makefile  Makefile.mingw  README.md
Releases/3.1-vortsohot/: Makefile.mingw  x25519.cpp
Releases/3.2-reggae/: basefiles.cpp  sygcpp.cpp  x25519.h
Releases/3.2.1-legend/: basefiles.cpp
dev/: README.md  basefiles.cpp  sygcpp.cpp
dev/windows/: resource.rc
src/: README.md  basefiles.cpp  configure.h  main.cpp  main.h  parameters.cpp  parametes.h  sha512.h  sygcpp.cpp  sygcpp.h  x25519.h
src-qt/: configure.h  logo.psd  main.cpp  miner.cpp  miner.h  qtdownload.cpp  qtdownload.h  resources.qrc  syg-cpp.pro  widget.cpp  widget.h  widget.ui
src/windows/: resource.rc
src/yggdrasil-0.4.x/: CMakeLists.txt  README.md  configure.h  main.cpp  main.h  parameters.cpp  sygcpp.pro  temporary.pro
src/yggdrasil-0.4.x/windows/: resource.rc
src/yggdrsail-0.3.x/: Makefile  sygcpp.cpp
test/: speedtest.cpp  string.cpp
test/web-download/: main.cpp  (+3 more)
(+12 files in other folders)
